--- a/detail-product/style.css
+++ b/detail-product/style.css
@@ -28,7 +28,7 @@
 
 .uk-bg{
   width: 360px !important;
-  height: auto !important;
+  height: 800px !important;
   background: black !important;
   align-items: center !important;
   justify-content: center !important;
