--- a/search-product/style.css
+++ b/search-product/style.css
@@ -1,7 +1,20 @@
+.container-bg{
+  background: white;
+  width: 360px;
+  height: auto;
+  margin: auto;
+  padding-top: 9px;
+}
+
+body{
+  background: lavender;
+}
 .uk-card {
   margin: 16px;
   display: flex !important;
   border-radius: 16px;
+  width: 300px;
+  height: 120px;
 }
 
 .uk-card > img {
@@ -11,5 +24,9 @@
 }
 
 .bar {
-  justify-content: space-between;
+  justify-content: space-around;
+}
+
+.barang {
+  margin-top: 25px;
 }
