--- a/styles/transaction-activity.css
+++ b/styles/transaction-activity.css
@@ -1,9 +1,8 @@
 .container-bg{
   background: white;
-  width: 360px;
-  height: 640px;
+  width: 100%;
+  height: 100vh;
   margin: auto;
-  padding-top: 9px;
 }
 
 body{
